package game;

/**
 * Represents a map element.
 */
public interface MapElement {

    /**
     * @return A character representing the map element in game.
     */
    char toSingleChar();
}
